--- a/sephora_app/src/Routes/Register/Register.css
+++ b/sephora_app/src/Routes/Register/Register.css
@@ -1,7 +1,3 @@
-*{
-    font-family: Arial, Helvetica, sans-serif;
-    color-scheme: light;
-}
-select>option{
-    background-color: red;
+input{
+    border:2px solid black;
 }
