--- a/sephora_app/src/Routes/Register/Register.css
+++ b/sephora_app/src/Routes/Register/Register.css
@@ -1,3 +1,32 @@
-input{
-    border:2px solid black;
+.reg{
+    position: relative;
+}
+.box{
+    position:static;
+    width:40%;
+    margin-left:30%;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    padding:1.5rem;
+    z-index: 2000;
+}
+
+
+
+
+
+
+@media all and (min-width: 270px) and (max-width: 768px){
+    .reg{
+        position: relative;
+        margin: 0px;
+    }
+    .box{
+        position:none;
+        width:100%;
+        margin-left:0%;
+        /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        padding:1.5rem; */
+    }
+    
+    
 }
