--- a/sephora_app/src/Routes/Register/Register.css
+++ b/sephora_app/src/Routes/Register/Register.css
@@ -1,13 +1,37 @@
 .reg{
-    position: relative;
+    background-color: white;
+    z-index: 2000;
 }
 .box{
-    position:static;
+    position:fixed;
+    left:30%;
+    top:0%;
     width:40%;
-    margin-left:30%;
+    height: 100vh;
+    /* margin-left:30%; */
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     padding:1.5rem;
     z-index: 2000;
+    background-color: white;
+}
+
+
+
+@media all and (min-width:270px) and (max-width:768px){
+    .reg{
+        position: none;
+        margin-top: 0px;
+        left: 0%;
+     }
+     .box{
+         position: none;
+         width:100%;
+         height: 100vh;
+         margin-left: 0%;
+         left: 0%;
+         top: 0%;
+         box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+     }
 }
 
 
