--- a/sephora_app/src/Routes/SignIn/SignIn.css
+++ b/sephora_app/src/Routes/SignIn/SignIn.css
@@ -1,11 +1,16 @@
 .sign{
-   position: relative;
+   /* position: relative; */
    margin-top: 2rem;
+   background-color: rgb(254, 251, 251);
+   /* margin-left: 30%; */
 }
 .flex{
-    position: static;
-    width:40%;
-    margin-left: 30%;
+    position: fixed;
+    left: 40%;
+    top: 3rem;
+    background-color: rgb(254, 251, 251);
+    /* width:100%; */
+    /* margin-left: 30%; */
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     z-index: 2000;
 }
@@ -17,12 +22,15 @@
     .sign{
         position: none;
         margin-top: 0px;
+        left: 0%;
      }
      .flex{
          position: none;
          width:100%;
          height: 100vh;
          margin-left: 0%;
+         left: 0%;
+         top: 0%;
          box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
      }
 }
